<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />
        <SwitchPreferenceCompat
            app:key="notification_reset"
            app:title="@string/notification_reset_enabler_title"
            app:summary="@string/notification_reset_enabler_summary"/>

        <SeekBarPreference
            app:dependency="notification_reset"
            app:key="attachment"
            app:title="@string/notification_reset_seekbar_title"
            android:max="100"
            app:min="80"
            app:showSeekBarValue="true"
            />

    </PreferenceCategory>

</PreferenceScreen>